# grafana-publisher

./: .gitignore  .releaserc.json  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  VERSION  install.sh  install.sh.conflict  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
config/: config.example.yaml
src/: cli.py  main_cli.py
src/commands/: doctor.py
src/core/: cache.py  config.py  logger.py  upgrade.py  version.py
src/processors/: alert_processor.py  field_mapper.py
src/publishers/: base.py  clickup.py  field_resolver.py
src/scrapers/: base.py  grafana.py
tests/: __init__.py  test_alert.py  test_field_resolver.py
